Fixed broken menu display on tablets and larger (see how this works)

--- a/css/style.css
+++ b/css/style.css
@@ -1821,6 +1821,11 @@ textarea#comment {
 	position: relative;
 }
 
+.header-menu ul ul {
+	left: auto;
+	right: auto;
+}
+
 .menu ul ul a {
 	width: 12em;
 }
